surrounding land and precipitation are correctly shown when viewing a report. added a comment field to reports. wrapped site in a containing div, and applied a maximum width of 700px

--- a/web/css/base.css
+++ b/web/css/base.css
@@ -2,6 +2,14 @@ body {
     background-color: #094897;
 }
 
+#container
+{
+    padding: 10px;
+    max-width: 700px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 h1,h2,h3,h4,h5,h6,p,table,ul,ol,blockquote,q
 {
     margin-bottom: 16px;
@@ -59,7 +67,7 @@ hr {
 
 #main-nav
 {
-    margin: 10px 10px 0;
+    margin: 0;
 }
 
 #main-nav ul
@@ -102,7 +110,7 @@ hr {
 #content
 {
     clear: left;
-    margin: 0 10px;
+    margin: 0;
     background-color: #fff;
     padding: 10px;
 }
@@ -111,7 +119,7 @@ footer
 {
     font-size: 13px;
     text-align: center;
-    margin: 0 10px;
+    margin: 0;
     background-color: #fff;
     padding: 10px;
 }
@@ -119,6 +127,12 @@ footer
 #content h1
 {
     font-size: 24px;
+    line-height: 24px;
+}
+
+#content h2
+{
+    font-size: 20px;
     line-height: 24px;
 }
 
